--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/node": "^12.20.25",
         "@types/react": "^17.0.22",
         "@types/react-dom": "^17.0.9",
+        "gh-pages": "^2.0.1",
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -51,7 +52,5 @@
             "last 1 safari version"
         ]
     },
-    "devDependencies": {
-        "gh-pages": "^2.0.1"
-    }
+    "devDependencies": {}
 }
